docs/0.6/_sources/api/gammapy.irf.EnergyDependentTablePSF.rst.txt


EnergyDependentTablePSF
===================================

.. currentmodule:: gammapy.irf

.. autoclass:: EnergyDependentTablePSF
   :show-inheritance:

   
     
   

   
   
   

   
   

   .. rubric:: Methods Summary

   .. autosummary::
   
      ~EnergyDependentTablePSF.containment_radius
      ~EnergyDependentTablePSF.evaluate
      ~EnergyDependentTablePSF.from_fits
      ~EnergyDependentTablePSF.info
      ~EnergyDependentTablePSF.integral
      ~EnergyDependentTablePSF.kernels
      ~EnergyDependentTablePSF.plot_containment_vs_energy
      ~EnergyDependentTablePSF.plot_exposure_vs_energy
      ~EnergyDependentTablePSF.plot_psf_vs_rad
      ~EnergyDependentTablePSF.read
      ~EnergyDependentTablePSF.table_psf_at_energy
      ~EnergyDependentTablePSF.table_psf_in_energy_band
      ~EnergyDependentTablePSF.to_fits
      ~EnergyDependentTablePSF.write

   
   

   
   
   

   
   

   .. rubric:: Methods Documentation

   
   .. automethod:: containment_radius
   .. automethod:: evaluate
   .. automethod:: from_fits
   .. automethod:: info
   .. automethod:: integral
   .. automethod:: kernels
   .. automethod:: plot_containment_vs_energy
   .. automethod:: plot_exposure_vs_energy
   .. automethod:: plot_psf_vs_rad
   .. automethod:: read
   .. automethod:: table_psf_at_energy
   .. automethod:: table_psf_in_energy_band
   .. automethod:: to_fits
   .. automethod:: write

   
   