docs/0.18.1/_sources/api/gammapy.irf.EnergyDependentTablePSF.rst.txt
EnergyDependentTablePSF
=======================

.. currentmodule:: gammapy.irf

.. autoclass:: EnergyDependentTablePSF
   :show-inheritance:

   .. rubric:: Attributes Summary

   .. autosummary::

      ~EnergyDependentTablePSF.energy_axis_true
      ~EnergyDependentTablePSF.rad_axis

   .. rubric:: Methods Summary

   .. autosummary::

      ~EnergyDependentTablePSF.containment
      ~EnergyDependentTablePSF.containment_radius
      ~EnergyDependentTablePSF.evaluate
      ~EnergyDependentTablePSF.from_hdulist
      ~EnergyDependentTablePSF.info
      ~EnergyDependentTablePSF.plot_containment_vs_energy
      ~EnergyDependentTablePSF.plot_exposure_vs_energy
      ~EnergyDependentTablePSF.plot_psf_vs_rad
      ~EnergyDependentTablePSF.read
      ~EnergyDependentTablePSF.stack
      ~EnergyDependentTablePSF.table_psf_at_energy
      ~EnergyDependentTablePSF.table_psf_in_energy_range
      ~EnergyDependentTablePSF.to_hdulist
      ~EnergyDependentTablePSF.write

   .. rubric:: Attributes Documentation

   .. autoattribute:: energy_axis_true
   .. autoattribute:: rad_axis

   .. rubric:: Methods Documentation

   .. automethod:: containment
   .. automethod:: containment_radius
   .. automethod:: evaluate
   .. automethod:: from_hdulist
   .. automethod:: info
   .. automethod:: plot_containment_vs_energy
   .. automethod:: plot_exposure_vs_energy
   .. automethod:: plot_psf_vs_rad
   .. automethod:: read
   .. automethod:: stack
   .. automethod:: table_psf_at_energy
   .. automethod:: table_psf_in_energy_range
   .. automethod:: to_hdulist
   .. automethod:: write
